--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "bson-objectid": "^2.0.3",
     "emojis-list": "^3.0.0",
+    "jquery": "^3.6.0",
+    "mongodb": "^4.8.1",
+    "node-fetch": "^3.2.10",
+    "objectid-tohexstring": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
